@@ -108,9 +108,15 @@ int handle__accepted_publish(struct mosquitto *context, struct mosquitto__base_m
 
 	if(!cmsg_stored){
 		if(base_msg->data.qos > 0 && context->msgs_in.inflight_quota == 0){
+			log__printf(NULL, MOSQ_LOG_WARNING, "Client %s has exceeded its receive-maximum quota. This behaviour must be fixed on the client.", context->id);
+#if 0
+			/* Badly behaving clients like on the esp32 fall foul of this
+			 * check, so report it for now but don't disconnect, to give chance
+			 * for the bad behaviour to be fixed. */
 			/* Client isn't allowed any more incoming messages, so fail early */
 			db__msg_store_free(base_msg);
 			return MOSQ_ERR_RECEIVE_MAXIMUM_EXCEEDED;
+#endif
 		}
 
 		if(base_msg->data.qos == 0
