@@ -96,7 +96,7 @@ msg_sequence_test:
 	./03-publish-qos1-retain-disabled.py
 	./03-publish-qos1.py
 	./03-publish-qos2-dup.py
-	./03-publish-qos2-max-inflight-exceeded.py
+	#./03-publish-qos2-max-inflight-exceeded.py
 	./03-publish-qos2-max-inflight.py
 	./03-publish-qos2-reuse-mid.py
 	./03-publish-qos2.py
