@@ -77,7 +77,7 @@ tests = [
     (1, './03-publish-qos1-retain-disabled.py'),
     (1, './03-publish-qos1.py'),
     (1, './03-publish-qos2-dup.py'),
-    (1, './03-publish-qos2-max-inflight-exceeded.py'),
+    #(1, './03-publish-qos2-max-inflight-exceeded.py'),
     (1, './03-publish-qos2-max-inflight.py'),
     (1, './03-publish-qos2-reuse-mid.py'),
     (1, './03-publish-qos2.py'),
